<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="me.angrybyte.visibilitydemo.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/app_desc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:enabled="false"
            android:text="@string/container_java" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/set_gone_container_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_visibility_gone"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/set_visible_container_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_visibility_visible"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/set_invisible_container_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_visibility_invisible"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/set_removed_container_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_visibility_remove_layout"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/state_java_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/container_one" />

        <TextView
            android:id="@+id/state_java_container_child_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/container_one_child_one" />

        <TextView
            android:id="@+id/state_java_container_child_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/container_one_child_two" />

        <FrameLayout
            android:id="@+id/container_java_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <include layout="@layout/container_java_visible" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:enabled="false"
            android:text="@string/container_xml" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/set_gone_container_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_visibility_gone"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/set_visible_container_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_visibility_visible"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/set_invisible_container_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_visibility_invisible"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/set_removed_container_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_visibility_remove_layout"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/state_xml_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/container_two" />

        <TextView
            android:id="@+id/state_xml_container_child_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/container_two_child_one" />

        <TextView
            android:id="@+id/state_xml_container_child_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/container_two_child_two" />

        <FrameLayout
            android:id="@+id/container_xml_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <include layout="@layout/container_xml_gone" />

        </FrameLayout>

    </LinearLayout>
</ScrollView>